Upadate configs
